Fix padding issues causing overflow

--- a/Libraries/css/themekit/_container.scss
+++ b/Libraries/css/themekit/_container.scss
@@ -1,5 +1,4 @@
 .container {
-  width: 90vw;
   padding: 2rem 5vw;
 
   &.centered {
@@ -16,7 +15,7 @@
   border-bottom: 1px solid map-get($components, "item");
   margin: 1rem auto;
   &.wide {
-    width: 100vw;
+    width: 100%;
   }
   &.narrow {
     width: 30vw;
