--- a/Libraries/css/themekit/_modal.scss
+++ b/Libraries/css/themekit/_modal.scss
@@ -40,6 +40,7 @@
   border-radius: 8px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.5);
   overflow: auto;
+  max-width: 1024;
 
   img {
     display: block;
